--- a/Practica01/Ejercitacion-04.html
+++ b/Practica01/Ejercitacion-04.html
@@ -1,1 +1,12 @@
-fdfsd
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a></a>
+    <img src="Img/UTN_logo.webp" alt="Logo de la Universidad UTN">
+</body>
+</html>
