Creacion de Tabla

--- a/Practica01/Ejercitacion-04.html
+++ b/Practica01/Ejercitacion-04.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <a></a>
-    <img src="Img/UTN_logo.webp" alt="Logo de la Universidad UTN">
+    <header>
+        <a href="https://www.frro.utn.edu.ar/"> <img src="Img/UTN_logo.webp" alt="Logo de la Universidad UTN" widt="200"
+                height="200"></a>
+        <hr>
+    </header>
+    <section>
+        <h1>AÑO 2008</h1>
+    </section>
+    <Section>
+        <table width="200" summary="Tabla que corresponde a la practica de HTML">
+            <tr>
+                <th scope="col"><strong>Examenes</strong></th>
+            </tr>
+            <tr>
+                <td>Fecha:................</td>
+                <td>
+                    <div>Aprobados</div>
+                    <div>23/30</div>
+                </td>
+            </tr>
+        </table>
+    </Section>
 </body>
+
 </html>
+
+. Las etiquetas son:
+- <table></table>: Para crear tablas
+- <table width="200" summary="Datos correspondientes al ejercicio vencido">: Define una tabla con un ancho de 200
+    píxeles y proporciona un resumen descriptivo del contenido de la tabla,
+    - <caption align="top">Título</caption>: Define un título para la tabla, que se posiciona en la parte superior
+    (align="top"). En este caso, el título es "Título".
+    - <tr></tr>: Define el comienzo y el final de una fila de la tabla.
+    - <th scope="col">&nbsp;</th>: Define una celda de encabezado en la primera fila de la tabla. El atributo "scope"
+    indica que esta celda es parte del encabezado de la columna. La entidad &nbsp; representa un espacio en blanco no
+    rompible, lo que significa que la celda está vacía,
+    - <th scope="row">1o</th>: Define una celda de encabezado en la primera columna de la tabla. El atributo "scope"
+    indica que esta celda es parte del encabezado de la fila. El texto "1o" indica el primer elemento en la primera
+    columna.
+    - <td></td>: En cada fila (<tr>) se especifican los contenidos de las celdas (<td>).
