--- a/Practica01/Ejercitacion-04.html
+++ b/Practica01/Ejercitacion-04.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercitación 04 - Entornos Graficos</title>
 </head>
 
 <body>
@@ -13,9 +13,11 @@
                 height="200"></a>
         <hr>
     </header>
+
     <section>
         <h1>AÑO 2008</h1>
     </section>
+
     <Section>
         <table width="200" summary="Tabla que corresponde a la practica de HTML">
             <tr>
@@ -30,21 +32,32 @@
             </tr>
         </table>
     </Section>
+
+    <section>
+        <ol>
+            <li><a href="https://drive.google.com/file/d/1y8NGWtS_ZASkFcmZQJnyOXeJmFe1gndq/view?usp=sharing">Enunciado
+                    del Examen</a></li>
+            <li><a
+                    href="https://drive.google.com/file/d/1y8NGWtS_ZASkFcmZQJnyOXeJmFe1gndq/view?usp=sharing">Resolucion</a>
+            </li>
+        </ol>
+    </section>
+    <br>
+    <section>
+        <p>Puede realizar consulas completando el siguiente formulario:</p>
+
+        <form>
+            <label for="email"><strong>e-mail:</strong></label>
+            <input type="email" id="email" name="email"><br><br>
+            <label for="message"><strong>consulta:</strong></label>
+            <textarea name="message" id="message"></textarea><br>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Borrar">
+        </form>
+
+    </section>
+
+   
 </body>
 
 </html>
-
-. Las etiquetas son:
-- <table></table>: Para crear tablas
-- <table width="200" summary="Datos correspondientes al ejercicio vencido">: Define una tabla con un ancho de 200
-    píxeles y proporciona un resumen descriptivo del contenido de la tabla,
-    - <caption align="top">Título</caption>: Define un título para la tabla, que se posiciona en la parte superior
-    (align="top"). En este caso, el título es "Título".
-    - <tr></tr>: Define el comienzo y el final de una fila de la tabla.
-    - <th scope="col">&nbsp;</th>: Define una celda de encabezado en la primera fila de la tabla. El atributo "scope"
-    indica que esta celda es parte del encabezado de la columna. La entidad &nbsp; representa un espacio en blanco no
-    rompible, lo que significa que la celda está vacía,
-    - <th scope="row">1o</th>: Define una celda de encabezado en la primera columna de la tabla. El atributo "scope"
-    indica que esta celda es parte del encabezado de la fila. El texto "1o" indica el primer elemento en la primera
-    columna.
-    - <td></td>: En cada fila (<tr>) se especifican los contenidos de las celdas (<td>).
