Commit desde mi Casa

--- a/Practica01/Ejercitacion-04.html
+++ b/Practica01/Ejercitacion-04.html
@@ -42,7 +42,9 @@
             </li>
         </ol>
     </section>
+
     <br>
+
     <section>
         <p>Puede realizar consulas completando el siguiente formulario:</p>
 
@@ -56,6 +58,22 @@
         </form>
 
     </section>
+
+    <section>
+        <h2><strong>Enunciado del Examen</strong></h2>
+        <p>Ejercicio 1:.............
+            ........................
+        </p>
+        <p>Ejercicio 2:.............
+            ........................
+        </p>
+    </section>
+
+    <footer>
+        <section>
+            <p>Para mas informacion dirigirse a <a href="Juan_Beltrame@hotmail.com"> Juan_Be</a></p>
+        </section>
+    </footer>
 
    
 </body>
