--- a/Practica01/Ejercitacion-04.html
+++ b/Practica01/Ejercitacion-04.html
@@ -42,6 +42,7 @@
             </li>
         </ol>
     </section>
+
     <br>
     <section>
         <p>Puede realizar consulas completando el siguiente formulario:</p>
@@ -54,10 +55,24 @@
             <input type="submit" value="Enviar">
             <input type="reset" value="Borrar">
         </form>
-
     </section>
 
-   
+    <section>
+        <h3><strong> Enunciado del examen </strong></h3>
+        <span> Ejercicio 1:....................<br>
+            ......................................
+        </span><br>
+        <span> Ejercicio 2:....................<br>
+            ......................................
+        </span>
+    </section>
+
+    <footer>
+        <section>
+            <P>Para mas informacion dirigirse a: <a href="mailto:Juan_Beltrame@hotmail.com">Juan_Beltrame@hotmail.com</a></P>
+        </section>
+    </footer>
+
 </body>
 
 </html>
