Comienzo del ejercicio 03

--- a/htmlDePrueba.html
+++ b/htmlDePrueba.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <p>Hola Lulu, tu nombre ahora esta en la web</p>
+  <p><img src="im1.jpg" alt="imagen1" /><a href="http://www.google.com.ar">Click aquí</a></p>
   
 </body>
 
