--- a/htmlParaPruebas.html
+++ b/htmlParaPruebas.html
@@ -9,6 +9,8 @@
 
 <body>
   <p><img src="im1.jpg" alt="imagen1" /><a href="http://www.google.com.ar">Click aquí</a></p>
+  <p><a href="http://www.google.com.ar"><img src="im1.jpg" alt="imagen1" /></a> Click aquí</p>
+  <p><a href="http://www.google.com.ar"><img src="im1.jpg" alt="imagen1" />Click aquí</a></p>
   
 </body>
 
