--- a/htmlParaPruebas.html
+++ b/htmlParaPruebas.html
@@ -8,10 +8,33 @@
 </head>
 
 <body>
-  <p><img src="im1.jpg" alt="imagen1" /><a href="http://www.google.com.ar">Click aquí</a></p>
-  <p><a href="http://www.google.com.ar"><img src="im1.jpg" alt="imagen1" /></a> Click aquí</p>
-  <p><a href="http://www.google.com.ar"><img src="im1.jpg" alt="imagen1" />Click aquí</a></p>
-  
+  <ul>
+    <li>xxx</li>
+    <li>yyy</li>
+    <li>zzz</li>
+  </ul>
+
+  <ol>
+    <li>xxx</li>
+    <li>yyy</li>
+    <li>zzz</li>
+  </ol>
+
+  <ol>
+    <li>xxx</li>
+  </ol>
+  <ol>
+    <li value="2">yyy</li>
+  </ol>
+  <ol>
+    <li value="3">zzz</li>
+  </ol>
+
+  <blockquote>
+    <p>1. xxx<br />
+      2. yyy<br />
+      3. zzz</p>
+  </blockquote>
 </body>
 
 </html>
