add new exercises

--- a/Practica01-Html/Ejercitacion-04.html
+++ b/Practica01-Html/Ejercitacion-04.html
@@ -19,9 +19,10 @@
     </section>
 
     <Section>
-        <table width="200" summary="Tabla que corresponde a la practica de HTML">
+        <table border="1" alwidth="200" summary="Tabla que corresponde a la practica de HTML">
             <tr>
-                <th scope="col"><strong>Examenes</strong></th>
+                <th colspan="2"><strong>Examenes</strong>
+                </th>
             </tr>
             <tr>
                 <td>Fecha:................</td>
@@ -70,7 +71,8 @@
 
     <footer>
         <section>
-            <P>Para mas informacion dirigirse a: <a href="mailto:Juan_Beltrame@hotmail.com">Juan_Beltrame@hotmail.com</a></P>
+            <P>Para mas informacion dirigirse a: <a
+                    href="mailto:Juan_Beltrame@hotmail.com">Juan_Beltrame@hotmail.com</a></P>
         </section>
     </footer>
 
