--- a/htmlParaPruebas.html
+++ b/htmlParaPruebas.html
@@ -8,33 +8,40 @@
 </head>
 
 <body>
-  <ul>
-    <li>xxx</li>
-    <li>yyy</li>
-    <li>zzz</li>
-  </ul>
+  <table width="200">
+    <caption>
+      Título
+    </caption>
+    <tr>
+      <td bgcolor="#dddddd">&nbsp;</td>
+      <td bgcolor="#dddddd">&nbsp;</td>
+      <td bgcolor="#dddddd">&nbsp;</td>
+    </tr>
+    <tr>
+      <td bgcolor="#dddddd">&nbsp;</td>
+      <td bgcolor="#dddddd">
+        &nbsp;</td>
+      <td bgcolor="#dddddd">&nbsp;</td>
+    </tr>
+  </table>
 
-  <ol>
-    <li>xxx</li>
-    <li>yyy</li>
-    <li>zzz</li>
-  </ol>
-
-  <ol>
-    <li>xxx</li>
-  </ol>
-  <ol>
-    <li value="2">yyy</li>
-  </ol>
-  <ol>
-    <li value="3">zzz</li>
-  </ol>
-
-  <blockquote>
-    <p>1. xxx<br />
-      2. yyy<br />
-      3. zzz</p>
-  </blockquote>
+  <table width="200">
+    <tr>
+      <td colspan="3">
+        <div align="center">Título</div>
+      </td>
+    </tr>
+    <tr>
+      <td bgcolor="#dddddd">&nbsp;</td>
+      <td bgcolor="#dddddd">&nbsp;</td>
+      <td bgcolor="#dddddd">&nbsp;</td>
+    </tr>
+    <tr>
+      <td bgcolor="#dddddd">&nbsp;</td>
+      <td bgcolor="#dddddd">&nbsp;</td>
+      <td bgcolor="#dddddd">&nbsp;</td>
+    </tr>
+  </table>
 </body>
 
 </html>
