Terminar con el ejercicio numero 3

--- a/htmlParaPruebas.html
+++ b/htmlParaPruebas.html
@@ -8,40 +8,29 @@
 </head>
 
 <body>
-  <table width="200">
-    <caption>
-      Título
-    </caption>
-    <tr>
-      <td bgcolor="#dddddd">&nbsp;</td>
-      <td bgcolor="#dddddd">&nbsp;</td>
-      <td bgcolor="#dddddd">&nbsp;</td>
-    </tr>
-    <tr>
-      <td bgcolor="#dddddd">&nbsp;</td>
-      <td bgcolor="#dddddd">
-        &nbsp;</td>
-      <td bgcolor="#dddddd">&nbsp;</td>
-    </tr>
-  </table>
+  <select name="lista">
+    <optgroup label="Caso 1">
+      <option>Mayo</option>
+      <option>Junio</option>
+    </optgroup>
+    <optgroup label="Caso 2">
+      <option>Mayo</option>
+      <option>Junio</option>
+    </optgroup>
+  </select>
 
-  <table width="200">
-    <tr>
-      <td colspan="3">
-        <div align="center">Título</div>
-      </td>
-    </tr>
-    <tr>
-      <td bgcolor="#dddddd">&nbsp;</td>
-      <td bgcolor="#dddddd">&nbsp;</td>
-      <td bgcolor="#dddddd">&nbsp;</td>
-    </tr>
-    <tr>
-      <td bgcolor="#dddddd">&nbsp;</td>
-      <td bgcolor="#dddddd">&nbsp;</td>
-      <td bgcolor="#dddddd">&nbsp;</td>
-    </tr>
-  </table>
+
+  <select name="lista[]" multiple="multiple">
+    <optgroup label=" Caso 1">
+      <option>Mayo</option>
+      <option>Junio</option>
+    </optgroup>
+    <optgroup label=" Caso 2">
+      <option>Mayo</option>
+      <option>Junio</option>
+    </optgroup>
+  </select>
+
 </body>
 
 </html>
