--- a/Practica01-Html/Ejercitacion-04.html
+++ b/Practica01-Html/Ejercitacion-04.html
@@ -19,17 +19,18 @@
     </section>
 
     <Section>
-        <table border="1" alwidth="200" summary="Tabla que corresponde a la practica de HTML">
+        <table width="200" border="1" cellpadding="0" cellspacing="0">
             <tr>
-                <th colspan="2"><strong>Examenes</strong>
-                </th>
+                <td colspan="2">
+                    <div align="center">Examenes</div>
+                </td>
             </tr>
             <tr>
-                <td>Fecha:................</td>
-                <td>
-                    <div>Aprobados</div>
-                    <div>23/30</div>
-                </td>
+                <td rowspan="2">Fecha:.....</td>
+                <td align="center">Aprobados</td>
+            </tr>
+            <tr>
+                <td width="50%" align="center">24/30</td>
             </tr>
         </table>
     </Section>
