--- a/Practica02-Css/Ejercitacion-02-css.html
+++ b/Practica02-Css/Ejercitacion-02-css.html
@@ -37,3 +37,45 @@
 </body>
 
 </html>
+
+<!--
+Este código HTML y CSS define estilos para tres elementos de párrafo <p> y una tabla <table>
+--------------------------------------------------------------------------------------------
+HTML:
+--------------------------------------------------------------------------------------------
+<p id="normal">Este es un párrafo</p>: 
+    Este párrafo tiene el ID "normal", por lo que se le aplica el estilo definido en p#normal. 
+    Esto incluye la fuente Arial o Helvetica, tamaño de fuente de 11px y texto en negrita.
+
+<p id="destacado">Este es otro párrafo</p>: 
+    Este párrafo tiene el ID "destacado", por lo que se le aplica el estilo definido en *#destacado. 
+    Esto incluye un borde sólido azul de 2 píxeles alrededor del párrafo.
+
+<table id="destacado"><tr><td>Esta es una tabla</td></tr></table>: 
+    Esta tabla tiene el ID "destacado", por lo que se le aplica el estilo definido en *#destacado. 
+    Esto incluye un borde sólido azul de 2 píxeles alrededor de la tabla.
+
+<p id="distinto">Este es el último párrafo</p>: 
+    Este párrafo tiene el ID "distinto", por lo que se le aplica el estilo definido en #distinto. 
+    Esto incluye un fondo de color azul claro y texto rojo.
+
+--------------------------------------------------------------------------------------------
+CSS:
+--------------------------------------------------------------------------------------------
+p#normal: Esta regla CSS aplica un estilo a los elementos <p> con el ID "normal".
+    Declaración:
+        font-family: arial,helvetica;: Establece la fuente del texto como Arial o Helvetica.
+        font-size: 11px;: Establece el tamaño de la fuente en 11 píxeles.
+        font-weight: bold;: Establece el peso de la fuente en negrita.
+
+*#destacado: Esta regla CSS aplica un estilo a cualquier elemento con el ID "destacado".
+    Declaración:
+        border-style: solid;: Establece el estilo del borde como sólido.
+        border-color: blue;: Establece el color del borde como azul.
+        border-width: 2px;: Establece el ancho del borde en 2 píxeles.
+
+#distinto: Esta regla CSS aplica un estilo a los elementos con el ID "distinto".
+    Declaración:
+        background-color: #9EC7EB;: Establece el color de fondo como un tono de azul claro.
+        color: red;: Establece el color del texto como rojo.
+-->
