--- a/Practica02-Css/Ejercitacion-03-css.html
+++ b/Practica02-Css/Ejercitacion-03-css.html
@@ -42,3 +42,54 @@
 </body>
 
 </html>
+
+<!--
+CSS:
+p.quitar: Esta regla CSS aplica un estilo a los elementos <p> con la clase "quitar".
+Declaración:
+color: red;: Establece el color del texto en rojo.
+*.desarrollo: Esta regla CSS aplica un estilo a cualquier elemento con la clase "desarrollo".
+Declaración:
+font-size: 8px;: Establece el tamaño de la fuente en 8 píxeles.
+.importante: Esta regla CSS aplica un estilo a cualquier elemento con la clase "importante".
+Declaración:
+font-size: 20px;: Establece el tamaño de la fuente en 20 píxeles.
+--------------------------------------------------------------------------------------------
+HTML:
+--------------------------------------------------------------------------------------------
+<p class="desarrollo">: 
+    Este párrafo tiene la clase "desarrollo", por lo que se le aplica el estilo definido en *.desarrollo. 
+    Esto incluye un tamaño de fuente de 8px.
+
+<p class="quitar">: 
+    Este párrafo tiene la clase "quitar", por lo que se le aplica el estilo definido en p.quitar. 
+    Esto hace que el texto dentro del párrafo sea rojo.
+
+<p>: 
+    Este párrafo no tiene ninguna clase asociada, por lo que no se aplica ningún estilo específico de CSS.
+
+<p class="importante">: 
+    Este párrafo tiene la clase "importante", por lo que se le aplica el estilo definido en .importante. 
+    Esto incluye un tamaño de fuente de 20px.
+
+<h1 class="quitar">: 
+    Este encabezado tiene la clase "quitar", por lo que se le aplica el estilo definido en p.quitar. El texto del encabezado se volverá rojo.
+
+<p class="quitar importante">: 
+    Este párrafo tiene las clases "quitar" e "importante". 
+    Se aplican los estilos de ambas clases, 
+    lo que significa que el texto será rojo (de la clase "quitar") y el tamaño de la fuente será de 20px (de la clase "importante").
+
+--------------------------------------------------------------------------------------------
+CSS:
+--------------------------------------------------------------------------------------------
+p.quitar: Esta regla CSS aplica un estilo a los elementos <p> con la clase "quitar".
+Declaración:
+color: red;: Establece el color del texto en rojo.
+*.desarrollo: Esta regla CSS aplica un estilo a cualquier elemento con la clase "desarrollo".
+Declaración:
+font-size: 8px;: Establece el tamaño de la fuente en 8 píxeles.
+.importante: Esta regla CSS aplica un estilo a cualquier elemento con la clase "importante".
+Declaración:
+font-size: 20px;: Establece el tamaño de la fuente en 20 píxeles.    
+-->
