Update files Css Practice

--- a/Practica02-Css/Ejercitacion-03-css.html
+++ b/Practica02-Css/Ejercitacion-03-css.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercitacion 03</title>
     <style>
         p.quitar {
             color: red;
@@ -84,12 +84,14 @@ HTML:
 CSS:
 --------------------------------------------------------------------------------------------
 p.quitar: Esta regla CSS aplica un estilo a los elementos <p> con la clase "quitar".
-Declaración:
-color: red;: Establece el color del texto en rojo.
+    Declaración:
+        color: red;: Establece el color del texto en rojo.
+    
 *.desarrollo: Esta regla CSS aplica un estilo a cualquier elemento con la clase "desarrollo".
-Declaración:
-font-size: 8px;: Establece el tamaño de la fuente en 8 píxeles.
+    Declaración:
+        font-size: 8px;: Establece el tamaño de la fuente en 8 píxeles.
+
 .importante: Esta regla CSS aplica un estilo a cualquier elemento con la clase "importante".
-Declaración:
-font-size: 20px;: Establece el tamaño de la fuente en 20 píxeles.    
+    Declaración:
+        font-size: 20px;: Establece el tamaño de la fuente en 20 píxeles.    
 -->
