--- a/Practica02-Css/Ejercitacion-02-css.html
+++ b/Practica02-Css/Ejercitacion-02-css.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercitacion 02</title>
     <style>
         p#normal {
             font-family: arial, helvetica;
