--- a/Practica-01-Html/Ejercitacion-04-html.html
+++ b/Practica-01-Html/Ejercitacion-04-html.html
@@ -2,80 +2,78 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercitación 04 - Entornos Graficos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ejercitación 04 - Entornos Graficos</title>
 </head>
 
 <body>
-    <header>
-        <a href="https://www.frro.utn.edu.ar/"> <img src="Img/UTN_logo.webp" alt="Logo de la Universidad UTN" widt="200"
-                height="200"></a>
-        <hr>
-    </header>
+  <header>
+    <a href="https://www.frro.utn.edu.ar/"> <img src="Img/UTN_logo.webp" alt="Logo de la Universidad UTN" widt="200"
+        height="200"></a>
+    <hr>
+  </header>
 
+  <section>
+    <h1>AÑO 2008</h1>
+  </section>
+
+  <Section>
+    <table width="200" border="1" cellpadding="0" cellspacing="0">
+      <tr>
+        <td colspan="2">
+          <div align="center">Examenes</div>
+        </td>
+      </tr>
+      <tr>
+        <td rowspan="2">Fecha:.....</td>
+        <td align="center">Aprobados</td>
+      </tr>
+      <tr>
+        <td width="50%" align="center">24/30</td>
+      </tr>
+    </table>
+  </Section>
+
+  <section>
+    <ol>
+      <li><a href="https://drive.google.com/file/d/1y8NGWtS_ZASkFcmZQJnyOXeJmFe1gndq/view?usp=sharing">Enunciado
+          del Examen</a></li>
+      <li><a href="https://drive.google.com/file/d/1y8NGWtS_ZASkFcmZQJnyOXeJmFe1gndq/view?usp=sharing">Resolucion</a>
+      </li>
+    </ol>
+  </section>
+
+  <br>
+
+  <section>
+    <p>Puede realizar consulas completando el siguiente formulario:</p>
+
+    <form>
+      <label for="email"><strong>e-mail:</strong></label>
+      <input type="email" id="email" name="email"><br><br>
+      <label for="message"><strong>consulta:</strong></label>
+      <textarea name="message" id="message"></textarea><br>
+      <input type="submit" value="Enviar">
+      <input type="reset" value="Borrar">
+    </form>
+  </section>
+
+  <section>
+    <h3><strong> Enunciado del examen </strong></h3>
+    <span> Ejercicio 1:....................<br>
+      ......................................
+    </span><br>
+    <span> Ejercicio 2:....................<br>
+      ......................................
+    </span>
+  </section>
+
+  <footer>
     <section>
-        <h1>AÑO 2008</h1>
+      <P>Para mas informacion dirigirse a: <a href="mailto:Juan_Beltrame@hotmail.com">Juan_Beltrame@hotmail.com</a></P>
     </section>
-
-    <Section>
-        <table width="200" border="1" cellpadding="0" cellspacing="0">
-            <tr>
-                <td colspan="2">
-                    <div align="center">Examenes</div>
-                </td>
-            </tr>
-            <tr>
-                <td rowspan="2">Fecha:.....</td>
-                <td align="center">Aprobados</td>
-            </tr>
-            <tr>
-                <td width="50%" align="center">24/30</td>
-            </tr>
-        </table>
-    </Section>
-
-    <section>
-        <ol>
-            <li><a href="https://drive.google.com/file/d/1y8NGWtS_ZASkFcmZQJnyOXeJmFe1gndq/view?usp=sharing">Enunciado
-                    del Examen</a></li>
-            <li><a
-                    href="https://drive.google.com/file/d/1y8NGWtS_ZASkFcmZQJnyOXeJmFe1gndq/view?usp=sharing">Resolucion</a>
-            </li>
-        </ol>
-    </section>
-
-    <br>
-
-    <section>
-        <p>Puede realizar consulas completando el siguiente formulario:</p>
-
-        <form>
-            <label for="email"><strong>e-mail:</strong></label>
-            <input type="email" id="email" name="email"><br><br>
-            <label for="message"><strong>consulta:</strong></label>
-            <textarea name="message" id="message"></textarea><br>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Borrar">
-        </form>
-    </section>
-
-    <section>
-        <h3><strong> Enunciado del examen </strong></h3>
-        <span> Ejercicio 1:....................<br>
-            ......................................
-        </span><br>
-        <span> Ejercicio 2:....................<br>
-            ......................................
-        </span>
-    </section>
-
-    <footer>
-        <section>
-            <P>Para mas informacion dirigirse a: <a
-                    href="mailto:Juan_Beltrame@hotmail.com">Juan_Beltrame@hotmail.com</a></P>
-        </section>
-    </footer>
+  </footer>
 
 </body>
 
