Updates on CSS FIles

--- a/Practica-02-Css/Ejercitacion-04-css.html
+++ b/Practica-02-Css/Ejercitacion-04-css.html
@@ -82,7 +82,6 @@ Primer Código HTML:
 
 2. <table>: 
     No hay ninguna regla específica para las tablas, 
-    por lo que heredarán las propiedades de fuente y color del elemento <body>.
 
 3. <a href="http://www.google.com.ar">con un enlace</a>: 
     Los enlaces tienen varios estados definidos en las reglas CSS. 
@@ -105,7 +104,7 @@ Segundo Código HTML:
     es decir, Arial o Helvetica como fuente, 10px como tamaño de fuente y color negro (color:black;).
 
 3. <table>: 
-    Como en el primer código, heredará las propiedades de fuente y color del elemento <body>.
+    La tabla hereda las propiedades de la clase contenido aplicadas al <body>, como font-size: 14px y font-weight: bold. 
 
 4. <a href="http://www.google.com.ar">con un enlace</a>: 
     Al igual que en el primer código, el color del enlace variará según su estado.
