--- a/Practica-02-Css/Ejercitacion-05-css.html
+++ b/Practica-02-Css/Ejercitacion-05-css.html
@@ -31,7 +31,7 @@
     }
 
     /* 4. Los elementos identificados como “importante” dentro de cualquier bloque deben ser verdes, pero si están dentro de un título deben ser rojos. */
-    div #importante {
+    div .importante {
       color: green;
     }
 
