--- a/Practica-04-Bootstrap/Practica-01-Ejercitacion-01-02-03-bootstrap.html
+++ b/Practica-04-Bootstrap/Practica-01-Ejercitacion-01-02-03-bootstrap.html
@@ -14,12 +14,11 @@
     --------------------------------------------------------------------------------------------
     Bootstrap CSS 
     -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
-
     <!-- 
     --------------------------------------------------------------------------------------------
     Ejercitacion 03
@@ -29,7 +28,7 @@
     y añadirle esa clase al div con clase container que creamos en el ejercicio anterior.
     ---------------------------------------------------------------------------------------------
     -->
-    <link rel="stylesheet" type="text/css" href="/Practica-04-Bootstrap/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 
 <body>
@@ -40,8 +39,10 @@
     Crear un div de clase container, con una fila que contenga 1 columna.
     --------------------------------------------------------------------------------------------
     -->
-    <div class="container text-center">
-        <div class="col">Contenedor: Contaniner, Columna 1</div>
+    <div class="container text-center contenedor">
+        <div class ="row">
+            <div class="col">Contenedor: Contaniner, Columna 1</div>
+        </div>
     </div>
 </body>
 
