--- a/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
+++ b/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practica Bootstrap</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
 
     <style>
@@ -68,16 +68,16 @@
     <div class="container text-center">
         <!-- Fila 1: Una columna que ocupa el 100% del ancho -->
         <div class="row">
-            <div class="col">
+            <div class="col-12">
                 Columna 1
             </div>
         </div>
         <div class="row">
             <!-- Fila 2: Dos columnas que ocupan el 50% del ancho cada una -->
-            <div class="col">
+            <div class="col-6">
                 Columan 1
             </div>
-            <div class="col">
+            <div class="col-6">
                 Columna 2
             </div>
         </div>
