--- a/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
+++ b/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
@@ -40,10 +40,10 @@
         </div>
         <!-- Fila 2: Dos columnas en md+, apiladas en sm- -->
         <div class="row gx-3">
-            <div class="col-6 col-sm-12 mb-3">
+            <div class="col-sm-6 mb-3">
                 <div class="p-3 contenedor">6</div>
             </div>
-            <div class="col-md-6 col-sm-12">
+            <div class="col-sm-6">
                 <div class="p-3 contenedor">6</div>
             </div>
         </div>
