--- a/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
+++ b/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
@@ -35,16 +35,16 @@
         <!-- Fila 1: Siempre ocupa el 100% -->
         <div class="row mb-3">
             <div class="col-12">
-                <div class="p-3 contenedor">12</div>
+                <div class="p-3 contenedor" style="background-color: purple;">12</div>
             </div>
         </div>
         <!-- Fila 2: Dos columnas en md+, apiladas en sm- -->
         <div class="row gx-3">
             <div class="col-sm-6 mb-3">
-                <div class="p-3 contenedor">6</div>
+                <div class="p-3 contenedor" style="background-color: bisque;">6</div>
             </div>
             <div class="col-sm-6">
-                <div class="p-3 contenedor">6</div>
+                <div class="p-3 contenedor" style="background-color: rgb(185, 133, 102);">6</div>
             </div>
         </div>
     </div>
@@ -67,47 +67,47 @@
     <div class="container px-3 text-center">
         <div class="row mb-3">
             <div class="col-12">
-                <div class="p-5 contenedor">12</div>
+                <div class="p-5 contenedor" style="background-color: purple;">12</div>
             </div>
         </div>
         <div class="row align-items-stretch">
-            <div class="col-3">
-                <div class="h-100 p-5 contenedor">3</div>
+            <div class="col-sm-3 mb-3">
+                <div class="h-100 p-5 contenedor" style="background-color: bisque;">3</div>
             </div>
-            <div class="col-9">
+            <div class="col-sm-9">
                 <div class="row mb-3">
                     <div class="col-12 ">
-                        <div class="p-3 contenedor">12</div>
+                        <div class="p-3 contenedor" style="background-color: green;">12</div>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-4">
+                    <div class="col-sm-4 col-4">
                         <div class="p-3 contenedor"> 4</div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-4">
                         <div class="p-3 contenedor"> 4</div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-4">
                         <div class="p-3 contenedor"> 4</div>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-4">
+                    <div class="col-sm-4 col-4">
                         <div class="p-3 contenedor"> 4</div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-4">
                         <div class="p-3 contenedor"> 4</div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-4">
                         <div class="p-3 contenedor"> 4</div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-4">
-                        <div class="p-5 contenedor"> 4</div>
+                <div class="row mb-3">
+                    <div class="col-sm-4 col-6">
+                        <div class="p-5 contenedor" style="background-color: aqua;"> 4</div>
                     </div>
-                    <div class="col-8">
-                        <div class="p-5 contenedor"> 8</div>
+                    <div class="col-sm-8 col-6">
+                        <div class="p-5 contenedor" style="background-color: aqua;"> 8</div>
                     </div>
                 </div>
             </div>
