--- a/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
+++ b/Practica-04-Bootstrap/Practica-02-Ejercitacion-01-02-bootstrap.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practica Bootstrap</title>
+    <title>Practica Bootstrap - Ej 2</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
